# training-app

./: 1_Kalender.py  TODO.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: training.db
pages/: 1_Calendar.py  1_Kalender.py  2_Analyse.py  2_Analytics.py  3_Planlegger.py  3_Planner.py  4_Bruker.py  5_Admin.py
services/: analytics_service.py  calendar_page_service.py  calendar_service.py  database.py  email_service.py  load_service.py  performance_model.py  periodization_service.py  planner_service.py
services/coach/: adaptation_rules.py  coach_engine.py  injury_prevention.py  periodization.py  progression.py  workout_generator.py  workout_library.py
utils/: constants.py  navigation.py  ui_styles.py
