[project]
name = "training-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "streamlit-calendar>=1.4.0",
]
